[gd_scene load_steps=9 format=3 uid="uid://d3iu3yt3ohd0q"]

[ext_resource type="Script" path="res://Scenes/menus/settings_menu.gd" id="1_k7okj"]
[ext_resource type="Texture2D" uid="uid://btfw1lqc3x5qt" path="res://Assets/Menus/background_glacial_mountains_lightened.png" id="2_aao2p"]
[ext_resource type="FontFile" uid="uid://bfrgcrc3r2ncq" path="res://Assets/QuinqueFive.ttf" id="3_ix4q6"]
[ext_resource type="PackedScene" uid="uid://bmjixccdgpnb0" path="res://Scenes/Objects/SoundObjects/MenuTheme.tscn" id="4_kjc7n"]
[ext_resource type="PackedScene" uid="uid://bhxwtmtc6euj0" path="res://Scenes/Objects/SoundObjects/PressedButtonSound.tscn" id="5_466kn"]
[ext_resource type="PackedScene" uid="uid://byjdsncifff0r" path="res://Scenes/Objects/SoundObjects/HoverButtonSound.tscn" id="6_57m1d"]

[sub_resource type="LabelSettings" id="LabelSettings_arav3"]
font = ExtResource("3_ix4q6")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_wjxyh"]
font = ExtResource("3_ix4q6")
font_size = 20

[node name="settings_menu" type="Node2D"]
script = ExtResource("1_k7okj")

[node name="MenuBackground" type="PanelContainer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="MenuBackground"]
follow_viewport_enabled = true

[node name="Background0" type="Sprite2D" parent="MenuBackground/CanvasLayer"]
scale = Vector2(3, 3.133)
texture = ExtResource("2_aao2p")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="MenuBackground/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MenuBackground/CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MenuBackground/CanvasLayer/MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground/CanvasLayer/MarginContainer/PanelContainer/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="GameTitle" type="Label" parent="MenuBackground/CanvasLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"
label_settings = SubResource("LabelSettings_arav3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume" type="Label" parent="MenuBackground/CanvasLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Volume"
label_settings = SubResource("LabelSettings_wjxyh")
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="MenuBackground/CanvasLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(35, 50)
layout_mode = 2
step = 10.0
tick_count = 11

[node name="Label" type="Label" parent="MenuBackground/CanvasLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Volume"
label_settings = SubResource("LabelSettings_wjxyh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WindowSized" type="CheckButton" parent="MenuBackground/CanvasLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ix4q6")
theme_override_font_sizes/font_size = 20
text = "Window sized"

[node name="MenuTheme" parent="MenuBackground" instance=ExtResource("4_kjc7n")]
volume_db = -44.304

[node name="PressedButtonSound" parent="MenuBackground" instance=ExtResource("5_466kn")]

[node name="HoverButtonSound" parent="MenuBackground" instance=ExtResource("6_57m1d")]

[connection signal="pressed" from="MenuBackground/CanvasLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowSized" to="." method="_on_window_sized_pressed"]
